
* Fix false positive ``dict-iter-missing-items`` for dictionaries only using tuples as keys

  Closes #3282

* The ``unspecified-encoding`` checker now also checks calls to ``pathlib.Path().read_text()``
  and ``pathlib.Path().write_text()``

  Closes #4945

* Fix false positive ``superfluous-parens`` for tuples created with inner tuples

  Closes #4907

* Fix false positive ``unused-private-member`` for private staticmethods accessed in classmethods.

  Closes #4849

* Extended ``consider-using-in`` check to work for attribute access.

* Setting ``min-similarity-lines`` to 0 now makes the similarty checker stop checking for duplicate code

  Closes #4901

* Fix a bug where pylint complained if the cache's parent directory does not exist

  Closes #4900

* The ``global-variable-not-assigned`` checker now catches global variables that are never reassigned in a
  local scope and catches (reassigned) functions

  Closes #1375
  Closes #330

* Fix false positives for invalid-all-format that are lists or tuples at runtime

  Closes #4711

* Fix ``no-self-use`` and ``docparams extension`` for async functions and methods.

* Add documentation for ``pyreverse`` and ``symilar``

  Closes #4616

* Non symbolic messages with the wrong capitalisation now correctly trigger ``use-symbolic-message-instead``

  Closes #5000

* The ``consider-iterating-dictionary`` checker now also considers membership checks

  Closes #4069


What's New in Pylint 2.10.3?
============================
Release date: TBA

..
  Put bug fixes that should not wait for a new minor version here

* The ``invalid-name`` message is now more detailed when using multiple naming style regexes.


What's New in Pylint 2.10.2?
============================
Release date: 2021-08-21

* We now use platformdirs instead of appdirs since the latter is not maintained.

  Closes #4886

* Fix a crash in the checker raising ``shallow-copy-environ`` when failing to infer
  on ``copy.copy``

  Closes #4891


